# htp-ops-lib

./: CMakeLists.txt
include/: htp_ops.idl  message.h  op_reg.h
include/dsp/: dma_utils.h  hmx_utils.h  hvx_convert.h  hvx_internal.h  hvx_math.h  ops.h  power.h  quants.h  vtcm_mgr.h  worker_pool.h
include/host/: op_export.h  session.h
src/dsp/: commu.c  hmx_mgr.c  mat_mul.c  op_executor.cc  op_tests.cc  power.c  rms_norm.c  vtcm_mgr.c  worker_pool.c
src/dsp/ops/: flash_attn.c  mat_mul.c  precompute_table.c
src/host/: op_export.c  session.c  test.c
